force-app/main/default/objects/Animal_Episode__c/Animal_Episode__c.object-meta.xml
<CustomObject>
    <description>Captures a bounded period of care for an animal.</description>
    <label>Animal Episode</label>
    <nameField>
        <label>Episode Number</label>
        <displayFormat>EP-{00000}</displayFormat>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Animal Episodes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>