force-app/main/default/objects/Animal_Episode__c/fields/Animal__c.field-meta.xml
<CustomField>
    <fullName>Animal__c</fullName>
    <description>Animal that owns this episode.</description>
    <label>Animal</label>
    <referenceTo>Animal__c</referenceTo>
    <relationshipLabel>Episodes</relationshipLabel>
    <relationshipName>Episodes</relationshipName>
    <type>MasterDetail</type>
</CustomField>