force-app/main/default/objects/Animal_Episode__c/fields/Current_Location_Stay__c.field-meta.xml
<CustomField>
    <fullName>Current_Location_Stay__c</fullName>
    <description
  >System-maintained pointer to the active location stay.</description>
    <inlineHelpText
  >This field is system maintained by operational automation.</inlineHelpText>
    <label>Current Location Stay</label>
    <referenceTo>Animal_Location_Stay__c</referenceTo>
    <relationshipLabel>Current Episodes</relationshipLabel>
    <relationshipName>Current_Episodes</relationshipName>
    <type>Lookup</type>
</CustomField>