force-app/main/default/objects/Animal_Episode__c/fields/Current_Welfare_Level__c.field-meta.xml
<CustomField>
    <fullName>Current_Welfare_Level__c</fullName>
    <description
  >System-maintained current welfare level for the active episode.</description>
    <inlineHelpText
  >This field is maintained by assessment automation and should remain read-only for operational users.</inlineHelpText>
    <label>Current Welfare Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>A360_Welfare_Risk</valueSetName>
    </valueSet>
</CustomField>