force-app/main/default/objects/Animal_Episode__c/fields/Episode_Status__c.field-meta.xml
<CustomField>
    <fullName>Episode_Status__c</fullName>
    <description>Current operational status for the episode.</description>
    <label>Episode Status</label>
    <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
            <value>
                <fullName>Planned</fullName>
            </value>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            </valueSetDefinition>
        </valueSet>
</CustomField>