force-app/main/default/objects/Animal_Episode__c/fields/Episode_Type__c.field-meta.xml
<CustomField>
    <fullName>Episode_Type__c</fullName>
    <description>Classification for this episode.</description>
    <label>Episode Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>A360_Episode_Type</valueSetName>
    </valueSet>
</CustomField>