force-app/main/default/objects/Animal_Episode__c/fields/Intake_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Intake_DateTime__c</fullName>
    <description>Date and time the episode started.</description>
    <label>Intake Date Time</label>
    <type>DateTime</type>
</CustomField>