force-app/main/default/objects/Animal_Episode__c/fields/Intake_Source__c.field-meta.xml
<CustomField>
    <fullName>Intake_Source__c</fullName>
    <description>How the animal entered care for this episode.</description>
    <label>Intake Source</label>
    <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
            <value>
                <fullName>Stray</fullName>
            </value>
            <value>
                <fullName>Owner Surrender</fullName>
            </value>
            <value>
                <fullName>Transfer In</fullName>
            </value>
            <value>
                <fullName>Seizure</fullName>
            </value>
            <value>
                <fullName>Return</fullName>
            </value>
            <value>
                <fullName>Born In Care</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            </valueSetDefinition>
        </valueSet>
</CustomField>