force-app/main/default/objects/Animal_Episode__c/fields/Is_Current__c.field-meta.xml
<CustomField>
    <fullName>Is_Current__c</fullName>
    <description
  >Marks the episode as the active episode for the animal.</description>
    <label>Is Current</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>