force-app/main/default/objects/Animal_Episode__c/fields/Next_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Review_Date__c</fullName>
    <description
  >System-maintained next welfare or clinical review date for the active episode.</description>
    <inlineHelpText
  >This field is maintained by assessment automation and should remain read-only for operational users.</inlineHelpText>
    <label>Next Review Date</label>
    <type>Date</type>
</CustomField>