force-app/main/default/objects/Animal_Episode__c/fields/Outcome_Account__c.field-meta.xml
<CustomField>
    <fullName>Outcome_Account__c</fullName>
    <description
  >Destination or responsible organisation captured at closeout.</description>
    <label>Outcome Organisation</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Episodes as Outcome Account</relationshipLabel>
    <relationshipName>Episodes_as_Outcome_Account</relationshipName>
    <type>Lookup</type>
</CustomField>