force-app/main/default/objects/Animal_Episode__c/fields/Outcome_Contact__c.field-meta.xml
<CustomField>
    <fullName>Outcome_Contact__c</fullName>
    <description
  >Destination or responsible contact captured at closeout.</description>
    <label>Outcome Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Episodes as Outcome Contact</relationshipLabel>
    <relationshipName>Episodes_as_Outcome_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>