force-app/main/default/objects/Animal_Episode__c/validationRules/A360_Current_Episode_No_End.validationRule-meta.xml
<ValidationRule>
    <active>true</active>
    <description
  >Prevents active episodes from storing an end date.</description>
    <errorConditionFormula
  >AND(Is_Current__c, NOT(ISBLANK(End_DateTime__c)))</errorConditionFormula>
    <errorMessage
  >Clear Is Current before entering an End Date Time.</errorMessage>
    <fullName>A360_Current_Episode_No_End</fullName>
</ValidationRule>